# GW2WingmanPBBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  bot.py  logging_config.json  pyproject.toml  requirements.txt  startupvars.py  webserver.py
